--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
 						<h3>Ragini Tiwari</h3>
-						<h2 class="rotate">DESIGNER &AMP; DEVELOPER &AMP; Coder  </h2>
+						<h2 class="rotate">DESIGNER &AMP; DEVELOPER &AMP; CODER  </h2>
 						<p>Enthusiastic coder skilled in  Java , Python , MERN and More adept at troubleshooting and testing for diverse projects.Eager to contribute to innovative software development teams, and collaborate on cutting-edge solutions. Committed to continuous learning and open to connecting with like-minded professionals.</p>
 						<a href="#About" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
@@ -192,43 +192,53 @@
 				  </div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
+						<a href="portfolio1.html">
 						<img src="images/full stack.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4 class="filter-btn" data-filter="full-stack" onclick="redirectToPortfolio('portfolio.html')">Full Stack</h4>
-							</div>
+								<h4 class="filter-btn" data-filter="full-stack">Full Stack</h4>
+							</div> 
+				</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
+						<a href="portfolio1.html">
 						<img src="images/web app.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Web App</h4>
 							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
+						<a href="portfolio2.html">
 						<img src="images/mobile.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Mobile App</h4>
 							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
+						<a href="portfolio3.html">
 						<img src="images/ana.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Analysis</h4>
 							</div>
+							</a>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
+						<a href="portfolio3.html">
 						<img src="images/ai.jpeg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>AI || ML</h4>
 								
 							</div>
+						</a>
 					</div>
 				</div>
 			</div>
