--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,800' rel='stylesheet' type='text/css'>
 		<!-- fullpage -->
 		<link rel="stylesheet" href="css/jquery.fullPage.css">
+		<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+		<script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 		<!-- custom -->
 		<link rel="stylesheet" href="css/style.css">
 
@@ -48,6 +50,7 @@
 						<h2 class="rotate">DESIGNER &AMP; DEVELOPER &AMP; CODER  </h2>
 						<p>Enthusiastic coder skilled in  Java , Python , MERN and More adept at troubleshooting and testing for diverse projects.Eager to contribute to innovative software development teams, and collaborate on cutting-edge solutions. Committed to continuous learning and open to connecting with like-minded professionals.</p>
 						<a href="#About" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
+						<a href="./images/my-cv.pdf" class="btn btn-default smoothScroll wow fadeInUp">Download CV</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
@@ -105,75 +108,130 @@
 			</div>
 		</div>
 		<!-- end work -->
-		<!-- Image container -->
-		<h2>Skills</h2>
-		<div id="skills" class="section">
-    <div class="image-container">
-	<!-- Sample images with names -->
-	<div class="image-item">
-	  <img src="images/java.png" alt="Image 1">
-	  <div class="image-name"></div>
-	</div>
-	<div class="image-item">
-	  <img src="images/c.png" alt="Image 2">
-	  <div class="image-name"></div>
-	</div>
-	<div class="image-item">
-		<img src="images/python.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  
-	  <div class="image-item">
-		<img src="images/css.jpeg" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/js.jpeg" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/react.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/node.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/express.jpeg" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/php.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/django.jpeg" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/sql.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/mongodb.jpeg" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/ttt.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/r.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	  <div class="image-item">
-		<img src="images/kotlin.png" alt="Image 2">
-		<div class="image-name"></div>
-	  </div>
-	<!-- Add more image items as needed -->
-  </div>
-</div>
+		<!-- Skills -->
+		<h1 class="sub-title">My <span>Skills</span></h1>
+
+    <section>
+        <div class="container1" id="skills">
+            <h1 class="headings1">Technical Skills</h1>
+            <div class="Technical-bars">
+				<div class="bars"><i class='bx bxs-tree' style='color:#D43F52'></i>
+					<div class="info">
+						<span>Java</span>
+					</div>
+					<div class="progress-line java"></div>
+					<span></span>
+				</div>
+                <div class="bars"><i class='bx bxl-html5' style='color:#D43F52'></i>
+                    <div class="info">
+                        <span>HTML</span>
+                    </div>
+                    <div class="progress-line html"></div>
+                    <span></span>
+                </div>
+            </div>
+            <div class="bars"><i class='bx bxl-css3' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>CSS</span>
+                </div>
+                <div class="progress-line css"></div>
+                <span></span>
+            </div>
+            <div class="bars"><i class='bx bxl-python' style='color: #D43F52'></i>
+                <div class="info">
+                    <span>Python</span>
+                </div>
+                <div class="progress-line python"></div>
+                <span></span>
+            </div>
+            <div class="bars"><i class='bx bxl-javascript' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>Javascript</span>
+                </div>
+                <div class="progress-line javascript"></div>
+                <span></span>
+            </div>
+
+            <div class="bars"><i class='bx bxl-react' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>React</span>
+                </div>
+                <div class="progress-line react"></div>
+                <span></span>
+            </div>
+            <div class="bars"><i class='bx bxl-django' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>Django</span>
+                </div>
+                <div class="progress-line django"></div>
+                <span></span>
+            </div>
+			<div class="bars"><i class='bx bx-cloud' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>AWS</span>
+                </div>
+                <div class="progress-line python"></div>
+                <span></span>
+            </div>
+
+            <div class="bars"><i class='bx bxl-android' style='color:#D43F52'></i>
+                <div class="info">
+                    <span>ANDROID</span>
+                </div>
+                <div class="progress-line android"></div>
+                <span></span>
+            </div>
+        </div>
+        <div class="container1" id="skills">
+            <h1 class="headings1">Professional Skills</h1>
+
+        <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">90%</div>
+            <div class="text">Creativity</div>
+        </div>
+
+        <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">80%</div>
+            <div class="text">Communication</div>
+        </div>
+
+        <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">85%</div>
+            <div class="text">Problem Solving</div>
+        </div>
+
+        <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">70%</div>
+            <div class="text">Teamwork</div>
+        </div>
+
+        <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">90%</div>
+            <div class="text">Leadership</div>
+        </div>
+        </div>
+    </section>
+
 
 		<!-- start portfolio -->
 		<div id="portfolio" class="section">
@@ -258,13 +316,14 @@
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
-						<form role="form" method="post" action="#">
+						<form role="form" method="post" action="#" name="submit-to-google-sheet">
 							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
 							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
 							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
 							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
 						</form>
 					</div>
+					
 					<div class="col-md-1 col-sm-1"></div>
 				</div>
 			</div>
@@ -290,6 +349,18 @@
 		<!-- end footer -->
 
 	</div>
+	<script>
+		const scriptURL = 'https://script.google.com/macros/s/AKfycbxzniyZIq41xwa82CcOUZZYs8DCwpWz5ljiuCfeU5QN9qUb_3evZxAatA1eSh8Ph5c/exec'
+		const form = document.forms['submit-to-google-sheet']
+	  
+		form.addEventListener('submit', e => {
+		  e.preventDefault()
+		  fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+			.then(response => console.log('Success!', response))
+			.catch(error => console.error('Error!', error.message))
+		})
+	  </script>
+
 
 		<!-- jQuery -->
 		<script src="js/jquery.js"></script>
