--- a/portfolio2.html
+++ b/portfolio2.html
@@ -14,10 +14,10 @@
     <div class="project-details">
         <h2>Library Management System</h2>
         <img src="images/ai.jpeg" alt="Project 2">
-        <p class="short-desc">The Library Management System project is developed using Java with Swing for the graphical user interface.</p>
+        <p class="short-desc">The Library Management System project is developed using MERN .</p>
         <p class="full-desc" style="display: none;"> It offers functionalities like adding new books, updating existing information, searching for specific titles or authors, managing borrower details, and processing book lending and returning transactions, enhancing overall library operations and organization.</p>
         <p><span class="show-more" onclick="toggleDescription(this)">Show More</span></p>
-        <a href="https://github.com/yourusername/project2" target="_blank" class="btn">GitHub Link</a>
+        <a href="https://github.com/Ragini-Tiwari/library-management-system-using-MERN" target="_blank" class="btn">GitHub Link</a>
       </div>
     
       <div class="project-details">
