update index file

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
 		
 
     <section>
+		<span></span>
 		<h1 class="sub-title">My <span>Skills</span></h1>
         <div class="container1" id="skills">
             <h1 class="headings1">Technical Skills</h1>
