--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <section>
 		<span></span>
         <div class="container1" id="skills">
-			<h2 class="sub-title">My <span>Skills</span></h2>
+			<h1 class="headings1">My Skills</h1>
             <h1 class="headings1">Technical Skills</h1>
             <div class="Technical-bars">
 				<div class="bars"><i class='bx bxs-tree' style='color:#D43F52'></i>
